# devops-study-app

./: .gitignore  .pre-commit-config.yaml  .release-please-config.json  mise.toml  release-please-manifest.json
.devcontainer/: devcontainer.json
.github/workflows/: backend-tests.yaml  docker-build-push.yaml  e2e-tests.yaml  frontend-tests.yaml  release-please.yaml  update-gitops.yaml  update_kustomize_tag
kubernetes/: k3d-config.yaml  pyproject.toml  setup_cluster_gitops  setup_cluster_local  setup_gitops
scripts/: setup  setup_deploy_key  setup_project
src/backend/: CHANGELOG.md  Dockerfile  pyproject.toml
src/backend/src/backend/: main.py
src/backend/src/data/: sessions.csv
src/frontend/: CHANGELOG.md  pyproject.toml
src/frontend/src/frontend/: main.py
src/frontend/tests/: conftest.py  test_main.py
