[project]
name = "study-tracker-backend"
version = "0.0.0"
description = "Backend API for tracking study time for DevOps certifications"
readme = "README.md"
authors = [{ name = "Pybash", email = "pybashinf@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.1",
    "httpx>=0.28.1",
    "uvicorn>=0.38.0",
]

[project.scripts]
study-tracker-api = "backend.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.5",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
