[project]
name = "study-tracker-frontend"
version = "0.0.0"
description = "Frontend for DevOps Study Tracker application"
readme = "README.md"
authors = [{ name = "pybash", email = "pybashinf@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "frontend>=0.0.3",
    "requests>=2.32.5",
]

[project.scripts]
study-tracker-frontend = "frontend.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "responses>=0.25.8",
]
